# avito-rag-agent

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run.py
scripts/: create_sample_data.py  fetch_sitemap.py  scrape_articles.py  test_rag_eval.py
src/api/: main.py  schemas.py
src/generation/: llm_client.py  prompt_templates.py  rag_pipeline.py
src/ingestion/: chunker.py  embeddings.py  loader.py  pipeline.py
src/retrieval/: retriever.py
tests/: test_pipeline.py
ui/: app.py
