[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avito-rag-agent"
version = "0.1.0"
description = "RAG-agent for Avito support articles — NLP/LLM portfolio project"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "openai>=1.30",
    "langchain>=0.3",
    "langchain-text-splitters>=0.3",
    "ragas>=0.2",
    "pandas>=2.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "gradio>=5.0",
    "markdown>=3.7",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]
